--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free.html
@@ -9,11 +9,11 @@
 		<div class="container">
 			<h1>免费法律咨询</h1>
 			<p>请先选择咨询类型，以便为您精准解答</p>
-			<section class="col-md-12 col-sm-12 introcouPhone space20">
+			<section class="col-md-12 col-sm-12 introcouPhone space20" id="falltypusLevel1">
 				<div class="row">
 					<ul class="col-md-4 col-sm-6" th:each="falltypus : ${firstLevelFalltypus}">
 						<li class="introcoupCell btnSquare">
-							<a th:href="@{/public/falltypus/consulting/{id}(id=${falltypus.id})}" th:id="${falltypus.id}" th:text="${falltypus.name}"></a>
+							<a th:class="falltypus" th:href="@{/public/falltypus/level1/consulting/{id}(id=${falltypus.id})}" th:id="${falltypus.id}" th:text="${falltypus.name}"></a>
 						</li>
 					</ul>
 				</div>
