--- a/fxs-platform-web/src/main/resources/templates/addFalltypus.html
+++ b/fxs-platform-web/src/main/resources/templates/addFalltypus.html
@@ -55,7 +55,7 @@
 			
 			$.ajax({
 				type : 'POST',
-				url : '/falltypus',
+				url : '/public/falltypus',
 				data : JSON.stringify({"name": type}),
 				contentType : "application/json; charset=utf-8",
 				success : function(data) {
