--- a/fxs-platform-web/src/main/resources/templates/addSubFalltypus.html
+++ b/fxs-platform-web/src/main/resources/templates/addSubFalltypus.html
@@ -60,7 +60,7 @@
 			
 			$.ajax({
 				type : 'POST',
-				url : '/falltypus',
+				url : '/public/falltypus',
 				data : JSON.stringify({
 					"name": subType,
 					"parentTypeId": $("#selectParent").find("option:selected").attr("id")
