--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
@@ -17,7 +17,7 @@
 				<div class="row">
 					<ul class="col-md-2 col-sm-2" th:each="answer : ${question.answers}">
 						<li class="introcoupCell btnSquare">
-							<a href="" th:id="${answer.nextQuestionId}" th:text="${answer.description}"></a>
+							<a th:href="@{/public/question/answer/{id}(id=${answer.id})}" th:id="${answer.id}" th:text="${answer.description}"></a>
 						</li>
 					</ul>
 				</div>
@@ -32,24 +32,19 @@
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer"></div>
 	<script th:inline="javascript">
-	
-	    $(function() {
+	    /* $(function() {
 			$("#disputeInfo a").on("click", function(e) {
 				e.preventDefault()
 				$.ajax({
 					type : 'GET',
-					url : '/public/question/' + $(this).attr("id"),
+					url : '/public/question/answer/' + $(this).attr("id"),
 					success : function(data) {
-						/*<![CDATA[*/
-						var message = [[${questionItem}]];
-					    console.log(message); 
-					    /*]]>*/
 					},
 					error : function(error) {
 					}
 				});
 			})
-		})
+		}) */
 	</script>
 </body>
 </html>
