--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_phone.html
@@ -17,14 +17,55 @@
 			<section class="col-md-12 col-sm-12 writeInfo space20">
 				<div class="row">
 					<div class="col-md-8 col-sm-8">
-						<ul class="writeInfoText ulCell">
+						<ul class="writeInfoText ulCell" th:if="${#lists.isEmpty(myPhoneConsultings)}">
 							<li class="orange">您暂时没有电话咨询</li>
+						</ul>
+						<ul th:if="${not #lists.isEmpty(myPhoneConsultings)}" class="writeInfoText ulCell myCell" th:each="phoneConsulting : ${myPhoneConsultings}">
+							<li>电话号码: <span th:text="${phoneConsulting.contactPhone}"></span></li>
+							<li>提交时间： <span class="gray" th:text="${phoneConsulting.researvationDatetime}"></span></li>
 						</ul>
 						<div class="row">
 							<div class="col-md-12 col-sm-12 btnNext">
-								<button type="button" class="btn btn-primary btn-lg">立即提交</button>
+								<button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#buyConsulting">立即提交</button>
 							</div>
 						</div>
+						<div class="modal fade" id="buyConsulting" tabindex="-1" role="dialog" aria-labelledby="buyConsultingeModalLabel" aria-hidden="true">
+						  <div class="modal-dialog" role="document">
+						    <div class="modal-content">
+						      <div class="modal-header">
+						        <h5 class="modal-title" id="buyConsultingeModalLabel">还差最后一步</h5>
+						        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						          <span aria-hidden="true">&times;</span>
+						        </button>
+						      </div>
+						      <div class="modal-body">
+						        <form>
+						          <div class="form-group">
+						            <label for="recipient-name" class="form-control-label">电话号码:</label>
+						            <input type="text" class="form-control" id="contactPhone" />
+						          </div>
+						        </form>
+						      </div>
+						      <div class="modal-footer">
+						        <button type="button" class="btn btn-primary" id="savePhoneConsulting">保存</button>
+						      </div>
+						    </div>
+						  </div>
+					</div>
+					<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
+					    <div class="modal-dialog">
+					        <div class="modal-content">
+					            <div class="modal-header">
+					                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					                <h4 class="modal-title">提示信息</h4>
+					            </div>
+					            <div class="modal-body" id="modalContent"></div>
+					            <div class="modal-footer">
+					                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+					            </div>
+					        </div>
+					    </div>
+					</div>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="writeInfoRight ulCell">
@@ -45,5 +86,31 @@
 		</div>
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer" ></div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("#savePhoneConsulting").on("click", function() {
+				$.ajax({
+					type : 'POST',
+					url : '/public/case/reservation',
+					data : JSON.stringify({"contactPhone": $("#contactPhone").val()}),
+					contentType : "application/json; charset=utf-8",
+					success : function(data) {
+						$("#modalContent").empty().append("电话咨询提交成功")
+						$("#contactPhone").val('');
+						$("#buyConsulting").modal('hide');
+						$("#notificationModal").modal("show")
+					},
+					error : function(error) {
+						$("#modalContent").empty().append("电话咨询提交失败")
+						$("#notificationModal").modal("show")
+					}
+				});
+			})
+			
+			$('#notificationModal').on('hidden.bs.modal', function () {
+				window.location.assign(location.href);
+			})
+		})
+	</script>
 </body>
 </html>
