--- a/fxs-platform-web/src/main/resources/templates/litigant_lawsuit.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_lawsuit.html
@@ -15,26 +15,16 @@
 			<section class="col-md-12 col-sm-12 writeInfo space20">
 				<div class="row">
 					<div class="col-md-8 col-sm-8 mybox">
-						<a href="">
+						<a href="" th:each="myLawsuit : ${myLawsuit}">
 							<ul class="writeInfoText ulCell myCell">
 								<li>起诉地点 : 南京</li>
-								<li>案件类型 : 劳动纠纷</li>
+								<li>案件类型 : <span th:text="${myLawsuit.parentType} + ' - ' + ${myLawsuit.subType}"></span></li>
 								<li class="gray">
-									<span>案件编号 : 43828</span>
-									<span>案件提交时间: 2017.11.06 10:01</span>
+									<span>案件编号 : <span th:text="${myLawsuit.id}"></span></span>
+									<span>案件提交时间: <span th:text="${myLawsuit.createAt}"></span></span>
 								</li>
 							</ul> 
 						</a> 
-						<a href="">
-							<ul class="writeInfoText ulCell myCell">
-								<li>起诉地点 : 南京</li>
-								<li>案件类型 : 劳动纠纷</li>
-								<li class="gray">
-									<span>案件编号 : 43826</span>
-									<span>案件提交时间: 2017.11.06 10:01</span>
-								</li>
-							</ul>
-						</a>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="writeInfoRight ulCell">
