--- a/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
@@ -13,12 +13,12 @@
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/case/consulting/free}">
+								<a th:href="@{/litigant/case/consulting/free(caseType='0')}">
 									<img th:src="@{/img/mycenter_free.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/case/consulting/free}"><span>我的免费咨询</span></a>
+								<a th:href="@{/litigant/case/consulting/free(caseType='0')}"><span>我的免费咨询</span></a>
 							</li>
 						</ul>
 					</div>
