--- a/fxs-platform-web/src/main/resources/templates/userRegister.html
+++ b/fxs-platform-web/src/main/resources/templates/userRegister.html
@@ -27,10 +27,10 @@
 	                                            <input type="text" class="form-control" th:field="*{mobile}" th:id="mobile" placeholder="输入电话号码" />
 	                                        </div>
 	                                        <div class="form-group">
-	                                            <input type="password" class="form-control" th:field="*{password}" th:id="password" value="" placeholder="输入密码" />
+	                                            <input type="password" class="form-control" th:field="*{password}" th:id="password" placeholder="输入密码" />
 	                                        </div>
 	                                        <div class="form-group">
-	                                            <input type="password" class="form-control" th:name="confirm-password" th:id="confirm-password" value="" placeholder="确认密码" />
+	                                            <input type="password" class="form-control" th:id="confirm-password" placeholder="确认密码" />
 	                                        </div>
 	                                        <div class="form-group">
 												<select class="form-control" th:id="userProfiles" th:field="*{userProfiles}" style="background-color: black;">
