--- a/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_dashboard.html
@@ -37,12 +37,12 @@
 					<div class="col-md-4 col-sm-4">
 						<ul class="introcoupCell mycenterCell">
 							<li>
-								<a th:href="@{/litigant/case/lawsuit/request_lawyer}">
+								<a th:href="@{/litigant/case/lawsuit/request_lawyer(caseType='1')}">
 									<img th:src="@{/img/mycenter_aj.png}" />
 								</a>
 							</li>
 							<li>
-								<a th:href="@{/litigant/case/lawsuit/request_lawyer}"><span>我的竞标案件</span></a>
+								<a th:href="@{/litigant/case/lawsuit/request_lawyer(caseType='1')}"><span>我的竞标案件</span></a>
 							</li>
 						</ul>
 					</div>
