--- a/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
+++ b/fxs-platform-web/src/main/resources/templates/public_consulting_free_step2.html
@@ -23,6 +23,14 @@
 				</div>
 				
 				<div class="row">
+					<ul class="col-md-2 col-sm-2">
+						<li class="introcoupCell btnSquare">
+							<a th:href="@{/public/question/answer/10}" id="10">11</a>
+						</li>
+					</ul>
+				</div>
+				
+				<div class="row">
 					<div class="col-md-12 col-sm-12 btnNext">
 						<a type="button" class="btn btn-primary btn-lg" th:href="@{/public/case/consulting/next}">下一步</a>
 					</div>
