--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -87,7 +87,7 @@
 			$("#resolveDispute").on("click", function() {
 				$.ajax({
 					type : 'PUT',
-					url : '/public/case/update/' + [[${caseDetailInfo.id}]] + "/5",
+					url : '/user/case/update/' + [[${caseDetailInfo.id}]] + "/5",
 					data : JSON.stringify({}),
 					contentType : "application/json; charset=utf-8",
 					success : function(data) {
