--- a/fxs-platform-web/src/main/resources/templates/invalidSession.html
+++ b/fxs-platform-web/src/main/resources/templates/invalidSession.html
@@ -39,7 +39,7 @@
           <div class="form-group row signupTitle row">
             
             <div class="col-sm-offset-12 col-sm-12">
-              <button type="submit" class="btn btn-default"><a th:href="@{/invalid-session}" class='login-loginBTN'>前往首页</a></button>
+              <button type="submit" class="btn btn-default"><a th:href="@{/}" class='login-loginBTN'>前往首页</a></button>
             </div>
           </div>
       </div>
