--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -41,7 +41,7 @@
 								<li class="gray">2017.11.06 10:57</li>
 								<div class="row mybox">
 									<div class="col-md-12 btnSearch solutionTwoBtn">
-										<button type="button" class="btn btn-primary btn-lg">追问</button>
+										<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#addDetailedInquiry">追问</button>
 										&nbsp;&nbsp;
 										<button type="button" id="resolveDispute" class="btn btn-primary btn-lg">解决纠纷</button>
 									</div>
@@ -65,6 +65,28 @@
 					</div>
 				</section>
 			</div>
+		</div>
+		<div class="modal fade" id="addDetailedInquiry" tabindex="-1" role="dialog" aria-labelledby="addDetailedInquiryModalLabel" aria-hidden="true">
+			  <div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			          <span aria-hidden="true">&times;</span>
+			        </button>
+			      </div>
+			      <div class="modal-body">
+			        <form>
+			          <div class="form-group">
+			            <label for="recipient-name" class="form-control-label">追问问题:</label>
+			            <input type="text" class="form-control" id="detailedInquiryContent" />
+			          </div>
+			        </form>
+			      </div>
+			      <div class="modal-footer">
+			        <button type="button" class="btn btn-primary" id="saveDetailedInquiry">保存</button>
+			      </div>
+			    </div>
+			  </div>
 		</div>
 		<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
 		    <div class="modal-dialog">
@@ -96,6 +118,32 @@
 					},
 					error : function(error) {
 						$("#modalContent").empty().append("更新失败")
+						$("#notificationModal").modal("show")
+					}
+				});
+			})
+			
+			$("#saveDetailedInquiry").on("click", function() {
+				$.ajax({
+					type : 'PUT',
+					url : '/user/case/addDetailedInquiry/' + [[${caseDetailInfo.id}]],
+					data : JSON.stringify({"detailedInquirys": $("#detailedInquiryContent").val()}),
+					contentType : "application/json; charset=utf-8",
+					success : function(res) {
+						$("#addDetailedInquiry").modal("hide")
+						$("#detailedInquiryContent").val("")
+						if (res.data == 0) {
+							$("#modalContent").empty().append("追问信息添加成功")
+						} else if (res.data == -1) {
+							$("#modalContent").empty().append("追问次数已经达到最大，不能再添加追问信息")
+						}
+						
+						$("#notificationModal").modal("show")
+					},
+					error : function(error) {
+						$("#addDetailedInquiry").modal("hide")
+						$("#detailedInquiryContent").val("")
+						$("#modalContent").empty().append("追问信息添加失败")
 						$("#notificationModal").modal("show")
 					}
 				});
