--- a/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
+++ b/fxs-platform-web/src/main/resources/templates/public_lawsuit_lawyer_step3.html
@@ -20,28 +20,49 @@
 				<span class="orange">9406</span> 名用户正在通过 小帅网竞标模式 找律师 <a href="#">[
 					查看经典案例 ]</a>
 			</p>
-			<section class="col-md-12 col-sm-12 introcouPhone space20 sBtn">
+			<section class="col-md-12 col-sm-12 introcouPhone space20 sBtn" id="disputeInfo">
 				<h3 th:text="${question.question.description}"></h3>
 				<div class="row">
-					<ul class="col-md-2 col-sm-2" th:each="answer : ${question.answers}">
+					<ul class="col-md-2 col-sm-2" th:each="answer : ${question.answers}" th:id="${answer.id}" th:attr="isRoot=${question.question.isRootQuestion}">
 						<li class="introcoupCell btnSquare">
-							<a th:href="@{/public/question/answer/{id}(id=${answer.id})}" th:id="${answer.id}" th:text="${answer.description}"></a>
+							<a href="" class="answerLink" th:id="${answer.id}" th:text="${answer.description}"></a>
 						</li>
 					</ul>
+				</div>
+				<div id="nextQuestionContainer">
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-sm-12 btnNext">
 						<a type="button" class="btn btn-primary btn-lg" th:href="@{/public/case/lawsuit/next}">下一步</a>
 					</div>
 				</div>
-				<!-- <div class="row">
-					<div class="col-md-12 col-sm-12 btnNext">
-						<button type="button" class="btn btn-primary btn-lg">立即提交</button>
-					</div>
-				</div> -->
 			</section>
 		</div>
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer"></div>
+	<script th:inline="javascript">
+	    $(function() {
+			$("#disputeInfo").on("click", 'ul', function(e) {
+				e.preventDefault()
+				
+				if ($(this).attr("isroot") === 'Y') {
+					$("#nextQuestionContainer").empty()
+				}
+				$.ajax({
+					type : 'GET',
+					url : '/public/question/answer/' + $(this).attr("id"),
+					success : function(res) {
+						console.log(res)
+						console.log(res.message)
+
+						$("#question_" + res.message).remove();
+						$("#nextQuestionContainer").append(res.data)
+					},
+					error : function(error) {
+					}
+				});
+			})
+		})
+	</script>
 </body>
 </html>
