--- a/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
@@ -13,7 +13,7 @@
 					<li><a href="my_freelist.html">我的免费咨询</a></li>
 					<li class="active">问题详情</li>
 				</ol>
-				<h1 class="blue">我的法律咨询</h1>
+				<h1 class="blue">我的官司</h1>
 				<section class="col-md-12 col-sm-12 writeInfo space20">
 					<div class="row">
 						<div class="col-md-10 col-sm-10">
