--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_detail.html
@@ -22,10 +22,9 @@
 										<tbody>
 											<tr class="listTitle">
 												<td colspan="2">
-													<b th:text="${caseDetailInfo.parentType}"></b>
+													<b th:text="${caseDetailInfo.falltypusType}"></b>
 													<span>案件编号 : <span th:text="${caseDetailInfo.id}"></span></span>
-													<span>榜单周期: 第20171108期</span></td>
-												<td></td>
+												</td>
 											</tr>
 											<tr>
 												<td colspan="2"><a href="">赢积分：</a> <span
