--- a/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_case_pool.html
@@ -53,7 +53,18 @@
 									</div>
 								</div>
 							</ul>
-							<ul class="writeInfoText ulCell myCell">未找到相关记录</ul>
+							<ul th:if="${not #lists.isEmpty(freeConsultings)}" class="writeInfoText ulCell myCell centerLi" th:each="freeConsulting : ${freeConsultings}">
+								<li class="listTitle">案件类型 : <b th:text="${freeConsulting.falltypusType}"></b> 
+									<span>案件编号 : <span th:text="${freeConsulting.id}"></span></span>
+								</li>
+								<li>咨询发布时间 : <span th:text="${freeConsulting.createAt}"></span></li>
+								<div class="row">
+									<div class="col-md-12 col-sm-12 btnNext btnSearch laybtnSearch">
+										<a th:href="@{/user/case/lawyer/consulting/viewDetail/{id}(id=${freeConsulting.id})}" type="button" class="btn btn-primary btn-lg">查看详情</a>
+									</div>
+								</div>
+							</ul>
+							<ul th:if="${#lists.isEmpty(freeConsultings)}" class="writeInfoText ulCell myCell">未找到相关记录</ul>
 						</div>
 					</div>
 				</section>
