--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="col-md-8 col-sm-8">
 						<ul class="writeInfoText ulCell myCell" th:each="freeConsulting : ${myFreeConsultings}">
-							<li>案件类型 : <span th:text="${freeConsulting.parentType} + ' - ' + ${freeConsulting.subType}"></span></li>
+							<li>案件类型 : <span th:text="${freeConsulting.falltypusType}"></span></li>
 							<li class="gray">
 								<span>案件编号 : <span th:text="${freeConsulting.id}"></span></span><br />
 								<span>案件提交时间: <span th:text="${freeConsulting.createAt}"></span></span>
